Fixing issue with spacing on skill section on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -617,6 +617,10 @@ body {
     overflow: hidden;
 }
 
+.ach-half .half-scroll {
+    margin-top: 10%;
+}
+
 .placehold {
     color: white;
     font-size: 1.8rem;
@@ -633,6 +637,7 @@ body {
     width: 10%;
     display: inline-block;
     z-index: 5;
+    top: 10%;
 }
 
 .skill-btn-group a {
@@ -879,7 +884,6 @@ body {
 
         .details {
             top: 40%;
-            height: 80%;
             width: 80%;
         }
 
@@ -1021,12 +1025,13 @@ body {
     }
 
     .ach-half .half-scroll {
-        padding-top: 5rem;
+        padding-top: 7rem;
     }
 
     .ach {
         height: 25%;
         width: 80%;
+        font-size: 1.2rem;
     }
 
     .ach-text i {
@@ -1303,6 +1308,10 @@ body {
         width: 4rem;
     }
 
+    .ach {
+        font-size: 0.9rem;
+    }
+
 }
 @media screen and (hover: none) and (max-width: 568px) {
     .big-ben {
@@ -1371,10 +1380,10 @@ body {
     }
 
     .details {
-        margin: 3rem 0.25rem 0 0.25rem;
-        width: 98%;
-        height: max-content;
+        margin: 4rem 0.25rem 0 0.25rem;
+        width: 100%;
         font-size: 0.9rem;
+        padding: 0.5rem;
     }
 }
 
